--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     html, body {
       height: 100%;
+      width: 100%;
       font-family: var(--font-mono);
       background: var(--bg);
       color: var(--text);
@@ -80,11 +81,11 @@
     .app {
       display: flex;
       flex-direction: column;
-      height: var(--app-height, 100dvh);
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
       max-width: 480px;
       margin: 0 auto;
       background: var(--bg);
-      position: relative;
       overflow: hidden;
     }
 
@@ -1276,7 +1277,7 @@ function initData(data) {
   buildFilters();
   buildQueue();
   showRandom();
-  showToast(`> ${allQuotes.length} phrases chargées`);
+  showToast(`${allQuotes.length} phrases chargées`);
 }
 
 
@@ -1900,41 +1901,6 @@ window.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-<script>
-  /* ── iOS PWA VIEWPORT FIX ── */
-  (function() {
-    function setAppHeight() {
-      // Utilise window.innerHeight qui reflète la vraie hauteur visible
-      // sans la barre d'adresse Safari ni la barre système
-      document.documentElement.style.setProperty('--app-height', window.innerHeight + 'px');
-    }
-
-    // Au chargement
-    setAppHeight();
-
-    // Au resize (rotation, apparition/disparition clavier)
-    window.addEventListener('resize', setAppHeight);
-
-    // Sur iOS, orientationchange se déclenche avant que innerHeight soit mis à jour
-    // On attend un tick pour avoir la bonne valeur
-    window.addEventListener('orientationchange', function() {
-      setTimeout(setAppHeight, 200);
-    });
-
-    // Sur iOS en mode PWA, le premier rendu peut être incorrect
-    // On force un recalcul après que tout soit chargé
-    window.addEventListener('load', function() {
-      setTimeout(setAppHeight, 100);
-    });
-
-    // Recalcul au focus (ex: retour depuis une autre app)
-    document.addEventListener('visibilitychange', function() {
-      if (document.visibilityState === 'visible') {
-        setTimeout(setAppHeight, 100);
-      }
-    });
-  })();
-</script>
 <script>
   document.addEventListener('selectstart', e => e.preventDefault());
   document.addEventListener('contextmenu', e => e.preventDefault());
