--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     .app {
       display: flex;
       flex-direction: column;
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
+      width: 100%;
       max-width: 480px;
+      height: 100svh;
       margin: 0 auto;
       background: var(--bg);
       overflow: hidden;
