--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 
     html, body {
       height: 100%;
-      width: 100%;
       font-family: var(--font-mono);
       background: var(--bg);
       color: var(--text);
@@ -81,11 +80,11 @@
     .app {
       display: flex;
       flex-direction: column;
-      width: 100%;
+      height: 100dvh;
       max-width: 480px;
-      height: 100svh;
       margin: 0 auto;
       background: var(--bg);
+      position: relative;
       overflow: hidden;
     }
 
@@ -180,15 +179,16 @@
       justify-content: space-between;
     }
 
-    /* ── QUOTE AREA : layout fixe ── */
+    /* ── QUOTE AREA : layout fixe en 3 zones ── */
     .quote-area {
       flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 0;
+      display: grid;
+      grid-template-rows: 1fr auto;
+      gap: 4px;
       padding: 28px 22px 16px;
       min-height: 0;
       position: relative;
+      gap: 0;
     }
 
     /* Coins décoratifs fixes */
@@ -211,18 +211,13 @@
       font-family: var(--font-mono);
     }
 
-    /* Zone centrale : hauteur fixe 50vh, jamais bougée */
+    /* Zone centrale : " + texte (scrollable si nécessaire) */
     .quote-center {
-      height: 50vh;
-      min-height: 50vh;
-      max-height: 50vh;
-      flex-shrink: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
-      overscroll-behavior: contain;
+      min-height: 0;
+      overflow: hidden;
     }
 
     .quote-mark {
@@ -257,18 +252,11 @@
     }
     @keyframes blink { 0%,100%{opacity:1} 50%{opacity:0} }
 
-    /* Zone basse : position fixe, ne pousse jamais vers le haut */
+    /* Zone basse : auteur + badges (fixe) */
     .quote-bottom {
       display: flex;
       flex-direction: column;
       gap: 0;
-      flex-shrink: 0;
-      transition: transform 0.35s cubic-bezier(0.22, 1, 0.36, 1);
-    }
-
-    /* Remonte légèrement quand le contexte est ouvert */
-    .quote-bottom.ctx-open {
-      transform: translateY(-14px);
     }
 
     /* Numéro au-dessus du séparateur, aligné à droite */
@@ -285,13 +273,6 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
-    }
-
-    /* Détails panel : hauteur max pour ne pas déborder */
-    .details-panel {
-      max-height: 120px;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
     }
 
     .quote-meta {
@@ -1277,7 +1258,7 @@ function initData(data) {
   buildFilters();
   buildQueue();
   showRandom();
-  showToast(`${allQuotes.length} phrases chargées`);
+  showToast(`> ${allQuotes.length} phrases chargées`);
 }
 
 
@@ -1378,7 +1359,6 @@ function buildChips(q) {
   row.innerHTML   = '';
   panel.innerHTML = '';
   panel.classList.remove('open');
-  document.getElementById('quote-bottom').classList.remove('ctx-open');
 
   const ctx       = getCol(q, COL.context);
   const mainCat   = getCol(q, COL.mainCat);
@@ -1392,7 +1372,7 @@ function buildChips(q) {
   if (volume) {
     const badge = document.createElement('span');
     badge.className = 'info-badge vol-badge';
-    badge.textContent = '📚 ' + volume;
+    badge.textContent = '📚 Vol. ' + volume;
     row.appendChild(badge);
   }
 
@@ -1423,11 +1403,8 @@ function buildChips(q) {
       const open = panel.classList.toggle('open');
       masterChip.classList.toggle('active', open);
       masterChip.innerHTML = open
-        ? '<span>↑</span> masquer'
-        : '<span>↓</span> voir le contexte';
-      // Remonter légèrement la zone basse quand contexte ouvert
-      const bottomEl = document.getElementById('quote-bottom');
-      bottomEl.classList.toggle('ctx-open', open);
+        ? `<span>↑</span> masquer`
+        : `<span>↓</span> voir le contexte`;
     };
     row.appendChild(masterChip);
 
@@ -1739,7 +1716,7 @@ function buildStats() {
     destroyChart('volumes');
     charts.volumes = new Chart(document.getElementById('chart-volumes'), {
       type: 'bar',
-      data: { labels: volSorted.map(e=>e[0]), datasets:[{ data:volSorted.map(e=>e[1]), backgroundColor: CHART_COLORS, borderRadius:8, borderSkipped:false }]},
+      data: { labels: volSorted.map(e=>'Vol. '+e[0]), datasets:[{ data:volSorted.map(e=>e[1]), backgroundColor: CHART_COLORS, borderRadius:8, borderSkipped:false }]},
       options: chartOpts('Phrases')
     });
   }
@@ -1900,7 +1877,6 @@ window.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
-
 <script>
   document.addEventListener('selectstart', e => e.preventDefault());
   document.addEventListener('contextmenu', e => e.preventDefault());
