--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     html, body {
       height: 100%;
+      overflow: hidden;
       font-family: var(--font-mono);
       background: var(--bg);
       color: var(--text);
@@ -80,12 +81,13 @@
     .app {
       display: flex;
       flex-direction: column;
+      height: 100vh;
       height: 100dvh;
       max-width: 480px;
       margin: 0 auto;
       background: var(--bg);
       position: relative;
-      overflow: hidden;
+      overflow: clip;
     }
 
     /* ── HEADER ── */
@@ -167,7 +169,8 @@
     /* ── SCREENS ── */
     .screen {
       display: none;
-      flex: 1;
+      flex: 1 1 0%;
+      min-height: 0;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
     }
@@ -177,6 +180,7 @@
     #screen-quote {
       padding: 0;
       justify-content: space-between;
+      overflow: hidden;
     }
 
     /* ── QUOTE AREA : layout fixe en 3 zones ── */
@@ -217,7 +221,8 @@
       flex-direction: column;
       justify-content: center;
       min-height: 0;
-      overflow: hidden;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
 
     .quote-mark {
@@ -424,7 +429,7 @@
 
     /* ── BOTTOM ACTION BAR ── */
     .bottom-bar {
-      padding: 12px 16px calc(var(--safe-bottom) + 12px);
+      padding: 12px 16px;
       display: flex;
       gap: 10px;
       align-items: center;
@@ -518,7 +523,7 @@
 
 
     /* ── STATS SCREEN ── */
-    #screen-stats { padding: 18px; gap: 16px; }
+    #screen-stats { padding: 18px 18px 32px; gap: 16px; }
 
     .stats-card {
       background: var(--panel);
@@ -571,7 +576,7 @@
 
 
     /* ── HISTORY SCREEN ── */
-    #screen-history { padding: 18px; gap: 10px; }
+    #screen-history { padding: 18px 18px 32px; gap: 10px; }
 
     .history-item {
       background: var(--panel);
